# nix-simple-ci

./: .gitignore  .hlint.yaml  ChangeLog.md  README.md  ci.nix  default.nix  hoogle  nix-simple-ci.cabal  shell.nix
nixpkgs/: github.json
src/: Main.hs
