name:                nix-simple-ci
version:             0.1.0.0
synopsis:            A simple CI server for Nix repositories
-- description:         
homepage:            https://github.com/ElvishJerricco/nix-simple-ci#readme
license:             BSD3
license-file:        LICENSE
author:              Will Fancher
maintainer:          elvishjerricco@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable nix-simple-ci
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >=4.9 && <4.10
                     , aeson
                     , servant-server
                     , servant-github-webhook
                     , warp
                     , wai-logger
                     , string-conversions
                     , text
                     , turtle
                     , lens-aeson
                     , lens
                     , async
                     , bytestring
                     , http-client
                     , optparse-generic
                     , http-client-tls
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
